--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-truth-helpers": "1.1.0",
     "ember-try": "0.0.6",
     "font-awesome": "FortAwesome/Font-Awesome#v4.4.0"
   },
@@ -44,7 +43,8 @@
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.3",
-    "ember-cli-htmlbars": "0.7.9"
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-truth-helpers": "1.1.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
