--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-sy",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Ember Components for AdCSSy",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,7 +11,7 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/adfinis-sygroup/ember-sy.git",
   "engines": {
     "node": ">= 0.10.0"
   },
