--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-try": "0.0.6",
-    "font-awesome": "FortAwesome/Font-Awesome#v4.4.0"
+    "font-awesome": "^4.4.0"
   },
   "keywords": [
     "ember-addon"
