--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "broccoli-funnel": "^0.2.8",
+    "ember-adcssy": "github:adfinis-sygroup/ember-adcssy#v1.1.0",
     "ember-ajax": "0.6.3",
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "^1.0.0",
