--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,10 @@
 {
   "name": "ember-sy",
   "dependencies": {
-    "adcssy": "adfinis-sygroup/adcssy#0.5.3",
-    "ember": "2.1.0",
-    "ember-cli-shims": "0.0.6",
-    "ember-cli-test-loader": "0.2.1",
-    "ember-data": "2.1.0",
-    "ember-load-initializers": "0.1.7",
-    "ember-qunit": "0.4.14",
-    "ember-qunit-notifications": "0.1.0",
-    "jquery": "^2.1.4",
-    "loader.js": "3.4.0",
-    "qunit": "~1.19.0"
+    "adcssy": "adfinis-sygroup/adcssy#0.7.4",
+    "ember": "~2.4.3",
+    "ember-cli-shims": "0.1.1",
+    "ember-cli-test-loader": "0.2.2",
+    "ember-qunit-notifications": "0.1.0"
   }
 }
