--- a/package.json
+++ b/package.json
@@ -8,46 +8,55 @@
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each"
+    "lint:js": "eslint ./*.js addon addon-test-support app blueprints config lib server test-support tests",
+    "start": "ember serve",
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
   "repository": "https://github.com/adfinis-sygroup/ember-sy.git",
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "author": "Damian Senn <damian.senn@adfinis-sygroup.ch>",
+  "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
   "license": "MIT",
   "dependencies": {
-    "babel-eslint": "^8.0.0",
-    "ember-cli-babel": "^6.3.0",
-    "ember-cli-htmlbars": "^2.0.1",
-    "ember-truth-helpers": "1.2.0",
-    "font-awesome": "^4.7.0",
-    "prettier": "^1.6.1"
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-htmlbars": "^2.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.5.2",
     "broccoli-asset-rev": "^2.4.5",
-    "ember-adcssy": "github:adfinis-sygroup/ember-adcssy#v1.1.0",
-    "ember-ajax": "^3.0.0",
-    "ember-cli": "~2.15.1",
-    "ember-cli-app-version": "^3.1.0",
+    "ember-adcssy": "^1.2.2",
+    "ember-cli": "~3.1.4",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.0.0",
-    "ember-cli-release": "0.2.8",
-    "ember-cli-shims": "^1.1.0",
+    "ember-cli-postcss": "^4.0.0",
+    "ember-cli-qunit": "^4.1.1",
+    "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.15.0",
-    "loader.js": "^4.2.3"
+    "ember-source": "~3.1.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-truth-helpers": "2.0.0",
+    "ember-try": "^0.2.23",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "loader.js": "^4.2.3",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-responsive-type": "^1.0.0",
+    "prettier": "^1.12.1"
   },
   "keywords": [
     "ember-addon"
